add test checkLinks, add Selenide proxy and launch remotely in Selenoid

--- a/src/main/resources/settings.properties
+++ b/src/main/resources/settings.properties
@@ -2,7 +2,10 @@ baseUrl=demoQa
 
 browser=chrome
 timeout=10000
-pageLoadTimeout=7000
+pageLoadTimeout=15000
+driverType=local
+
+remoteServerURL=http://localhost:4444/wd/hub
 
 #Testing sources
 petStore=https://petstore.swagger.io/v2
