--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,10 @@
                             <value>${testng.browser}</value>
                         </property>
                         <property>
+                            <name>driverType</name>
+                            <value>local</value>
+                        </property>
+                        <property>
                             <name>baseUrl</name>
                             <value>${testng.baseUrl}</value>
                         </property>
@@ -175,7 +179,7 @@
         <dependency>
             <groupId>com.codeborne</groupId>
             <artifactId>selenide</artifactId>
-            <version>7.5.1</version>
+            <version>7.9.3</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -233,6 +237,13 @@
             <groupId>com.github.javafaker</groupId>
             <artifactId>javafaker</artifactId>
             <version>1.0.2</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.codeborne/selenide-proxy -->
+        <dependency>
+            <groupId>com.codeborne</groupId>
+            <artifactId>selenide-proxy</artifactId>
+            <version>7.9.3</version>
         </dependency>
     </dependencies>
 </project>
