added screenshots and videos in case of autotest crashes

--- a/src/main/resources/settings.properties
+++ b/src/main/resources/settings.properties
@@ -5,7 +5,7 @@ timeout=10000
 pageLoadTimeout=15000
 driverType=local
 
-remoteServerURL=http://localhost:4444/wd/hub
+remoteServerURL=http://localhost
 
 #Testing sources
 petStore=https://petstore.swagger.io/v2
