add class MainPageTests

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,7 +4,7 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
-!logs for proxy
+!mute the logs for proxy
 log4j.logger.org.littleshoot.proxy=ERROR
 log4j.logger.com.browserup=ERROR
 log4j.logger.io.netty=OFF
