--- a/pom.xml
+++ b/pom.xml
@@ -246,5 +246,12 @@
             <artifactId>selenide-proxy</artifactId>
             <version>7.9.3</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-selenide -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-selenide</artifactId>
+            <version>2.29.1</version>
+        </dependency>
     </dependencies>
 </project>
